tests/ui/while/while-else-let-else-err.stderr
error: `while...else` loops are not supported
  --> $DIR/while-else-let-else-err.rs:4:7
   |
LL |       let _ = while false {
   |               ----- `else` is attached to this loop
LL |
LL |       } else {
   |  _______^
LL | |
LL | |
LL | |     };
   | |_____^
   |
   = note: consider moving this `else` clause to a separate `if` statement and use a `bool` variable to control if it should run

error: aborting due to previous error

